--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">小部落</string>
     <string name="github_link">Github Link</string>
     <string name="setting">设置</string>
+
+    <string name="home">主页</string>
+    <string name="book">阅读</string>
+    <string name="music">音乐</string>
+    <string name="game">游戏</string>
 </resources>
