--- a/music/src/main/res/values/strings.xml
+++ b/music/src/main/res/values/strings.xml
@@ -2,7 +2,13 @@
     <string name="music_app_name">music</string>
 
 
-    <string name="music_playlist">播放列表</string>
     <string name="music_tip_name">极乐净土</string>
     <string name="music_tip_artist">MARIA</string>
+
+
+    <string name="music_playlist">播放列表</string>
+    <string name="music_favorites_menu">收藏夹</string>
+    <string name="music_favorites_add">添加到收藏夹</string>
+    <string name="music_favorites_remove">从收藏夹移除</string>
+
 </resources>
