--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="setting">设置</string>
 
     <string name="home">主页</string>
-    <string name="book">阅读</string>
+    <string name="reader">阅读</string>
     <string name="music">音乐</string>
     <string name="game">游戏</string>
 </resources>
